# sudocul_solver_API

./: .clang-format  .dockerignore  CMakeLists.txt  Dockerfile  docker-compose.yml  manage.py
Sources/: Main.cpp  Solve.cpp  Solve.hpp
Sources/Tools/: Exec.cpp  Exec.hpp
solver_api/: apps.py  urls.py  views.py
sudocul/: asgi.py  settings.py  urls.py  wsgi.py
